ci: Add TurboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env: 
+          TURBO_TOKEN: TfpPumIJLGI7Ich5D2mibcFQ
+          TURBO_TEAM: rjsmatos98
 
       - name: Deploy storybook
         working-directory: ./packages/docs
