ci: Add TurboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: npm run build
         env: 
-          TURBO_TOKEN: TfpPumIJLGI7Ich5D2mibcFQ
+          TURBO_TOKEN: ${{ secrets.VERSEL_TOKEN }}
           TURBO_TEAM: rjsmatos98
 
       - name: Deploy storybook
